--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mercadopago": "^2.11.0",
+    "mongoose": "^9.1.1",
     "motion": "^12.23.26",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
@@ -55,13 +57,12 @@
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
+    "slugify": "^1.6.6",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "3.25.76",
-    "mongoose": "^9.1.1",
-    "slugify": "^1.6.6"
+    "zod": "3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
